update github ref

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                             <a style="cursor:pointer" data-toggle="modal" data-target="#modal-help"> Help </a>
                         </li>
                         <li>
-                            <a href="http://github.com/genentech/pviz">github</a>
+                            <a href="https://github.com/Genentech/pviz-app-vep">github</a>
                         </li>
 
                     </ul>
