links to other app & examples

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>more pViz</strong><b
                             class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../vep">Variant effect predictor app</a></li>
+                        <li><a href="../proteomics-3d">proteomics [23]D</a></li>
                         <li><a href="../../examples/">pViz.js atomic examples</a></li>
                     </ul>
                 </li>
