adjust to SYMBOL re-align fetures coreclty

--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="form-inline col-sm-10">
             <div class="form-group">
-                <input type='text' class="form-control input-lg tt-query" id="ac-typeahead" placeholder="gene name">
+                <input type='text' class="form-control input-lg tt-query" id="ac-typeahead" placeholder="gene name (HGNC or SYMBOL)">
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" id="ac-show">
