default test case as v73

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
                             class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class='load-test' set='test'>test</a>
+                            <a class='load-test' set='test-v73'>test</a>
                         </li>
                     </ul>
                 </li>
